--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "Gregory Breuer",
   "license": "MIT",
   "devDependencies": {
-    "electron-rebuild": "^1.10.0"
+    "electron-rebuild": "^1.10.1"
   },
   "dependencies": {
     "chart.js": "^2.9.3",
@@ -19,7 +19,6 @@
     "mqnode": "^1.0.0",
     "python-shell": "^1.0.8",
     "temp": "^0.9.1",
-    "zeromq": "^6.0.0-beta.6",
-    "zerorpc": "^0.9.8"
+    "zeromq": "^5.2.0"
   }
 }
