--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "electron ."
   },
-  "repository": "https://github.com/electron/electron-quick-start",
+  "repository": "https://github.com/gbreuer/cycler",
   "keywords": [],
   "author": "Gregory Breuer",
   "license": "MIT",
