--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "chart.js": "^2.9.3",
+    "chartjs-plugin-annotation": "^0.5.7",
     "electron-squirrel-startup": "^1.0.0",
     "mqnode": "^1.0.0",
     "python-shell": "^1.0.8",
